mas lindo y redondeado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <input type="number" id="ma" name="ma"><br>
         <br><br>
         <button id="enviador">Calcular</button>
-
+        
+        <h1>Temperatura final:</h1>
         <h1 id="resultado"></h1>
     </div>
 </body>
