--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
 <body>
     <h1>Calculador de temperaturas</h1>
+    <h2>A que te temperatura va a quedar tu agua luego de ponerle hielo???? Termometros odian esta simple calculadora</h2>
     <div style="background-color: antiquewhite;">
         <label for="ta"> Temperatura de agua </label><br>
         <input type="number" id="ta" name="ta"><br>
-        <label for="nh"> Cantidad de hielos </label><br>
+        <label for="nh"> Cantidad de cubitos de hielo </label><br>
         <input type="number" id="nh" name="nh"><br>
         <label for="ma"> Mililitros de agua </label><br>
         <input type="number" id="ma" name="ma"><br>
