--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br><br>
         <button id="enviador">Calcular</button>
         
-        <h1>Temperatura final:</h1>
+        <h1>Temperatura final (°C):</h1>
         <h1 id="resultado"></h1>
     </div>
 </body>
